name:               hello-simple
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable hello-simple
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      simple,
                      warp
